--- a/view/base.html
+++ b/view/base.html
@@ -1,13 +1,11 @@
 <?php require_once 'controller/ti.php' ?>
 <html>
-<title><?php startblock('title') ?>Közösségi oldal<?php endblock() ?></title>
-<body>
-<h1>
-<?php startblock('head') ?><?php endblock() ?>
-</h1>
-<div id='article'>
-<?php startblock('article') ?>
-<?php endblock() ?>
-</div>
-</body>
+    <head>
+        <title><?php startblock('title') ?>Közösségi oldal<?php endblock() ?></title>
+        <link rel="stylesheet" type="text/css" href="media/index.css" media="screen" />
+    </head>
+    <body>
+    <?php startblock('body') ?>
+    <?php endblock() ?>
+    </body>
 </html>
