--- a/view/index.html
+++ b/view/index.html
@@ -1,11 +1,1 @@
-<?php include 'view/base.html' ?>
-
-<?php startblock('head') ?>
-   Userek
-<?php endblock() ?>
-
-<?php startblock('article') ?>
-<?php foreach($users as $user){ ?>
-<p> <?php echo $user['EMAIL'], ' ', $user['KERESZTNEV']; ?></p>
-<?php } ?>
-<?php endblock() ?>
+<?php include 'view/3col.html' ?>
